fixed patient views 19-25

--- a/src/javascript/templates/patient1/patient1View19.hbs
+++ b/src/javascript/templates/patient1/patient1View19.hbs
@@ -60,7 +60,7 @@
       <blockquote>
         Velma’s doctors have sent her tissue sample for ER testing.
       </blockquote>
-        <ul class="specs">
+        <ul class="specs no-margin">
             <li>
                 The sample is viewed under a microscope. <br><strong> Brown color indicates a positive test.  No brown color indicates a negative test.</strong></li>
             <li>
@@ -72,7 +72,7 @@
 
         </ul>
         <div class="svg-container">
-            <img src="images/biopsy5.png" alt="cell biopsy slide 3" />
+            <img src="images/ER_Invasive2.jpg" alt="cell biopsy slide 3" />
             <div class="svg-text full">
                 <p>
                   <strong>Step 3</strong>
