--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -68,7 +68,7 @@
   Velma’s doctors have sent her tissue sample for HER2 FISH testing.      </blockquote>
 <h2>Conducting the HER2 FISH Test:</h2>
           <div class="svg-container">
-              <img src="images/biopsy5.png" alt="cell biopsy slide 3" />
+              <img src="images/microscope3.jpg" alt="cell biopsy slide 3" />
               <div class="svg-text full">
                   <p>
                     <strong>Step 2</strong>
