--- a/src/javascript/templates/patient1/patient1View22.hbs
+++ b/src/javascript/templates/patient1/patient1View22.hbs
@@ -57,7 +57,7 @@ Velma’s doctors have sent her tissue sample for HER2 FISH testing.
 </blockquote>
     <h2>Conducting the HER2 FISH Test:</h2>
       <div class="svg-container">
-          <img class="magnify" class="zoom" data-magnify-src="images/biopsy3.png" src="images/biopsy3.png" alt="cell biopsy slide 3" />
+        <img src="images/microscope3.jpg" alt="cell biopsy slide 3" />
           <div class="svg-text full">
               <p>
                   <strong>Step 1: </strong>
