patient1 - biopsy updated with content and styling

--- a/src/javascript/templates/patient1/patient1View15.hbs
+++ b/src/javascript/templates/patient1/patient1View15.hbs
@@ -51,12 +51,12 @@
                               </div>
                           </div>
                           <div class="col-md-6 col-md-offset-1 top-quote">
-
-                          <main id="content-main" class="row patient-1">
                             <blockquote>
-                      Molecular Tissue Testing is an important part of precision medicine.
-                      </blockquote>
-                            <p>Velma’s physicians need additional information in order to make the best recommendation for treatment.
+                        Molecular Tissue Testing is an important part of precision medicine.
+                        </blockquote>
+                          <main id="content-main" class="row patient-1">
+
+                            <p>Velma’s physicians need additional information in order to make the best recommendation for treatment.<br><br>
                       In this segment, you will learn about molecular tests performed on tumor tissue and how they determine a patient’s options for treatment.
 
                             </p>
