--- a/src/javascript/templates/patient1/patient1View7-3.hbs
+++ b/src/javascript/templates/patient1/patient1View7-3.hbs
@@ -1,6 +1,4 @@
 
-
-
             <div class="spacer2"></div>
             <div class="row">
               <div class="col-md-3 no-pad">
@@ -21,24 +19,11 @@
 
                         <div class="row breadcrumb biopsy">
                           <ul>
-                            <li class="first-step completed">
-                                <span class="dot completed"></span>
-                            </li>
-                            <li class="second-step completed">
-                                <span class="dot completed"></span>
-                            </li>
-                            <li class="third-step active">
-                                <span class="dot active">
-                                    <img src="images/hotspot.png" class="hotspot" alt="hotspot" />
-                                </span>
-                                <span class="dot active pulse"></span>
-                            </li>
-                            <li class="fourth-step">
-                                <span class="dot"></span>
-                            </li>
-                            <li class="fifth-step">
-                                <span class="dot"></span>
-                            </li>
+                            <li class="first-step completed"><span class="dot completed"></span></li>
+                            <li class="second-step active"><span class="dot active"><img src="images/hotspot.png" class="hotspot" alt="hotspot" /></span><span class="dot active pulse"></span></li>
+                            <li class="third-step"><span class="dot"></span></li>
+                            <li class="fourth-step"><span class="dot"></span></li>
+                            <li class="fifth-step"><span class="dot"></span></li>
                             <li class="6th-step "><span class="dot"></span></li>
                             <li class="7th-step "><span class="dot "></span></li>
                             <li class="8th-step "><span class="dot "></span></li>
@@ -60,35 +45,34 @@
               </div>
               <div class="col-md-6 col-md-offset-1 top-quote">
                 <blockquote>
-                Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
+                  Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
                 </blockquote>
                 <main id="content-main" class="row patient-1 svg-test">
 
-                <h2>Conducting the biopsy:</h2>
-                <p>Normal cells are orderly and form regular breast duct structures. The cells are similar to one another and have smaller nuclei.  They stain purple with intervening pink stain.
+                  <h2>Conducting the biopsy:</h2>
 
-                </p>
-                <h2>Normal</h2>
+                  <div class="svg-container">
+                      <img src="images/microscope3.jpg" alt="" />
+                      <div class="svg-text full">
+                          <p>
+                              <strong>Step 3:</strong>
+ Tissue is stained with two different-colored chemicals to help the pathologist determine whether or not the cells from the tissue sample are cancerous.
 
-                     <img class="magnify" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" />
+                            </p>
+                          <span class="left-arrow"><a class="top-fix" data-navigate="patient1view18">&#8594;</a></span>
 
-                    <p>
-Cancerous cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei.  They have no duct structures and stain more purple than pink.
-                    </p>
-                    <h2>Cancer</h2>
-                    <figure>
-                      <img class="magnify" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
-                    </figure>
+                      </div>
+                  </div>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                         <div class="col-md-4">
-                          <a data-navigate="patient1view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                          <a data-navigate="patient1view7_3" class="previous"><button class="" type="button" name="button">Previous</button></a>
                         </div>
                         <div class="col-md-4 line-across">
 
                         </div>
                         <div class="col-md-4">
-                          <a data-navigate="patient1view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient1view8" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                         </div>
                       </div>
                   </div>
