--- a/src/javascript/templates/patient1/patient1View7.hbs
+++ b/src/javascript/templates/patient1/patient1View7.hbs
@@ -44,21 +44,25 @@
                 </div>
               </div>
               <div class="col-md-6 col-md-offset-1 top-quote">
-
+                <blockquote>
+                  Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
+                </blockquote>
                 <main id="content-main" class="row patient-1 svg-test">
-                  <blockquote>
-                    Velma’s doctors have sent her biopsy tissue to be evaluated by the pathologist.
-                  </blockquote>
+
                   <h2>Conducting the biopsy:</h2>
 
-                  <p>
-                    <strong>Step 1</strong>
-                    Tissue is fixed and placed into wax.<br>
-                    <strong>Step 1: </strong> Tissue is fixed and placed into wax.<br>
-                    <strong>Step 2: </strong>Tissue sections are cut and placed onto a glass slide.<br>
-                    <strong>Step 3: </strong>Tissue is stained with two different-colored chemicals to help the pathologist determine whether or not the cells from the tissue sample are cancerous.
+                  <div class="svg-container">
+                      <img src="images/adjusting_testing_machine.jpg" alt="" />
+                      <div class="svg-text full">
+                          <p>
+                              <strong>Step 1:</strong>
+Tissue is fixed and placed into wax.
 
-                  </p>
+                            </p>
+                          <span class="left-arrow"><a class="" data-navigate="patient1view18">&#8594;</a></span>
+
+                      </div>
+                  </div>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                         <div class="col-md-4">
@@ -68,7 +72,7 @@
 
                         </div>
                         <div class="col-md-4">
-                          <a data-navigate="patient1view8" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient1view7_2" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                         </div>
                       </div>
                   </div>
