--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -59,21 +59,59 @@
               </div>
           </div>
           <div class="col-md-6 col-md-offset-1 top-quote">
-
+            <blockquote>
+              Velma had a right breast biopsy. Let’s evaluate the tissue.
+            </blockquote>
               <main id="content-main" class="row patient-1 svg-test">
-                <blockquote>
-                  Velma had a right breast biopsy. Let’s evaluate the tissue.
-                </blockquote>
+
                 <h2>Conducting the biopsy:</h2>
                 <p>Does this tissue sample indicate the presence of cancer?
                             </p>
                      <figure>
-                       <img class="magnify" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+                       <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
 
                        <figcaption>
 Velma’s breast tissue sample
                        </figcaption>
                      </figure>
+                     <div class="row m-bottom">
+
+
+                     <div class="col-md-2 yes-no col-sm-offset-3">
+                       <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No &#10007;</button></a>
+                       <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                         <div class="modal-dialog" role="document">
+                           <div class="modal-content">
+                             <div class="modal-body">
+                             <h2><span class="pink-hl">Incorrect.</span> The slide does contain cancer cells</h2>
+                             </div>
+                             <div class="modal-footer background-nav-blue">
+                               <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+
+                             </div>
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                     <div class="col-md-2  col-sm-offset-2 yes-no">
+                       <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes &#10003;</button></a>
+
+                       <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                         <div class="modal-dialog" role="document">
+                           <div class="modal-content">
+                             <div class="modal-body">
+                             <h2><span class="pink-hl">Correct!</span> The slide does contain cancer cells</h2>
+                             </div>
+                             <div class="modal-footer background-nav-blue">
+                               <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+
+                             </div>
+                           </div>
+                         </div>
+                       </div>
+
+                     </div>
+                     </div>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                           <div class="col-md-4">
