--- a/src/javascript/templates/screen2IntroView.hbs
+++ b/src/javascript/templates/screen2IntroView.hbs
@@ -7,7 +7,7 @@ Precision medicine is changing the face of cancer treatment.
 <p>In precision medicine, physicians consider an individual’s specific genes, medical history, environment, and lifestyle.  They use these factors – along with the specific characteristics of the  patient's tumor – to balance various options for  treatment and prevention of diseases, including breast cancer. This state-of-the-art approach reduces the chances of over-treating or under-treating breast cancer by tailoring treatment to each patient’s precise needs based on the characteristics of the tumor.
 </p>
    <figure>
-     <img src="images/bg3.jpg" alt="" />
+     <img class="one-hun" src="images/slide3.png" alt="" />
      <figcaption>
        This is a caption. Lorem ipsum dolor sin sit amet consectutor
      </figcaption>
