--- a/src/sass/_elements.scss
+++ b/src/sass/_elements.scss
@@ -39,13 +39,13 @@ blockquote {
           span {
             background-color: $light-blue;
             &.pink-hl {
-              background-color: $light-pink;
+              background-color: $pink;
 
             }
           }
 }
 .pink-hl {
-  background-color: $light-pink;
+  background-color: $pink;
 
 }
 .purple-hl {
