--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -55,7 +55,7 @@
 
       <h2>Conducting the ER test:</h2>
         <div class="svg-container">
-            <img class="magnify" class="zoom" data-magnify-src="images/ER_Invasive2.jpg" src="images/ER_Invasive2.jpg" alt="cell biopsy slide 3" />
+          <img src="images/test_sample_and_gloved_hand2.jpg" alt="" />
             <div class="svg-text full">
                 <p>
                     <strong>Step 1</strong>
