solved router bug by adding middleware to the server.js

--- a/src/javascript/templates/patient2/patient2view1.hbs
+++ b/src/javascript/templates/patient2/patient2view1.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
@@ -39,11 +39,11 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
-
-    <main id="content-main" class="row patient-2">
-      <blockquote>
+    <blockquote>
   In this segment of the Decoding Cancer Virtual Lab, you will evaluate Michele’s breast cancer and conduct tests to recommend a treatment plan.
-      </blockquote>
+    </blockquote>
+    <main id="content-main" class="row patient-2">
+
       <p>Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
 </p>
          <figure class="m-bottom">
