--- a/src/javascript/templates/patient2/patient2view3.hbs
+++ b/src/javascript/templates/patient2/patient2view3.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg">
         <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
@@ -39,10 +39,10 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
-
-    <main id="content-main" class="row patient-2 top-gray">
-      <blockquote>
+    <blockquote>
   Here is Michele’s mammogram.    </blockquote>
+    <main id="content-main" class="row patient-2 top-gray">
+
       <div class="header-gray">
         <div class="col-md-3">
           <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
