--- a/src/javascript/templates/patient2/patient2view4.hbs
+++ b/src/javascript/templates/patient2/patient2view4.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
@@ -39,11 +39,11 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
-
+    <blockquote>
+    Dr. You: Make a Decision
+    </blockquote>
     <main id="content-main" class="row patient-2">
-      <blockquote>
-  Dr. You: Make a Decision
-      </blockquote>
+
       <p>Do you have enough information to make a recommendation for treatment or do you need additional information?
 </p>
 <p>
@@ -58,13 +58,13 @@ Click below to make your selection for next steps.
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view3" class="previous"><button class="" type="button" name="button">Select Treatment</button></a>
+                 <a data-navigate="patient2view3" class="previous"><button class="select" type="button" name="button">Select Treatment</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view5" class="continue next"><button type="button" name="button">Next Test &#8594;</button></a>
+                 <a data-navigate="patient2view5" class="continue next next-test"><button type="button"class="next-test" name="button">Next Test &#8594;</button></a>
                </div>
              </div>
          </div>
