--- a/src/javascript/templates/patient2/patient2view5.hbs
+++ b/src/javascript/templates/patient2/patient2view5.hbs
@@ -1,10 +1,11 @@
+
 <div class="spacer2"></div>
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
-        <ul>
+        <img class="patient2" src="images/patient1-final.jpg">
+        <ul class="background-purple margin-bottom-0">
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
         </ul>
@@ -39,44 +40,38 @@
     </div>
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
-
-    <main id="content-main" class="row patient-2">
-      <blockquote>
+    <blockquote>
       Michele had a left breast biopsy. Let’s evaluate the tissue.
-      </blockquote>
-<div class="header-gray">
-  <div class="col-md-3">
-    <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
-  </div>
-  <div class="col-md-9">
-    <h4><b>Patient Overview</b>
-      Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+  </blockquote>
+    <main id="content-main" class="row patient-2 top-gray">
 
-
+      <div class="header-gray">
+        <div class="col-md-3">
+          <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
+        </div>
+        <div class="col-md-9">
+          <h4>Does this tissue sample indicate the presence of cancer?
 </h4>
 
-  </div>
-</div>
-      <p>
-        <ul class="specs">
-          <li><strong>Specimen Type:</strong>  Left breast biopsy</li>
-          <li><strong>Laterality:</strong> Left</li>
-          <li><strong>Tumor size:</strong>  1 cm</li>
-        </ul>
-        Does this tissue sample indicate the presence of cancer?
-
-In this segment of the Decoding Cancer Virtual Lab, you will take on the role
-of Michele's physician. You will recommend tests and review the results.
-Based on the results of those tests. you will either order additional tests or
-make recommendations around Michele's adjuvant treatment.
-
-Be sure to record Michele's test results and your notes in your Lab Handbook.</p>
+        </div>
+      </div>
+      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+</p>
          <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
+           <img src="images/p1screen3.png" alt="" />
            <figcaption>
-             Michele’s breast tissue sample
+             This is a caption. Lorem ipsum dolor sin sit amet consectutor
            </figcaption>
          </figure>
+         <p>
+           <ul class="specs">
+             <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
+             <li><strong>Laterality:</strong> left</li>
+             <li><strong>Tumor size:</strong>1 cm</li>
+
+           </ul>
+         </p>
+
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
@@ -90,6 +85,7 @@ Be sure to record Michele's test results and your notes in your Lab Handbook.</p
                </div>
              </div>
          </div>
+
 
     </main>
   </div>
