--- a/src/javascript/templates/patient2/patient2view6.hbs
+++ b/src/javascript/templates/patient2/patient2view6.hbs
@@ -3,7 +3,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
@@ -68,12 +68,9 @@
         </ul>
       </p>
 
-         <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
-           <figcaption>
-             This is a caption. Lorem ipsum dolor sin sit amet consectutor
-           </figcaption>
-         </figure>
+      <figure>
+        <img class="magnify" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+      </figure>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
