--- a/src/javascript/templates/patient2/patient2view2.hbs
+++ b/src/javascript/templates/patient2/patient2view2.hbs
@@ -15,7 +15,7 @@
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
       <nav class="side-nav background-purple">
-        <img class="img-responsive" src="images/patient2.png" alt="" />
+        <img class="patient2" src="images/patient1-final.jpg">
         <ul>
           <li><span class="white">Patient No.02</span></li>
           <li>Michele Johnson</li>
