--- a/src/javascript/templates/startView2.hbs
+++ b/src/javascript/templates/startView2.hbs
@@ -10,7 +10,7 @@
 <div class="pick-patient col-md-8 col-md-offset-2">
   <div class="overlay-pink"></div>
     <div class="col-md-5 no-pad">
-      <img src="images/patient_headshot3_cropped.jpg">
+      <img class="patient2" src="images/patient3-final.jpg">
         <img class="up-next finished" src="images/completed.png" alt="" />
     </div>
     <div class="col-md-7 no-pad ">
@@ -28,7 +28,7 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2">
     <div class="col-md-5 no-pad">
-      <img src="images/patient_headshot2.jpg">
+      <img class="patient2" src="images/patient1-final.jpg">
         <img class="up-next" src="images/up-next.png" alt="" />
     </div>
     <div class="col-md-7 no-pad">
@@ -46,7 +46,7 @@
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
   <div class="col-md-5 no-pad">
-    <img src="images/patient_headshot1.jpg">
+    <img class="patient2" src="images/patient2-final.jpg">
     <img class="up-next" src="images/up-next.png" alt="" />
   </div>
   <div class="col-md-7 no-pad locked">
