finished out patient3 screens, but havent hooked up or styled them yet

--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -95,7 +95,7 @@ Velma’s breast tissue sample
                      </div>
                      <div class="col-md-2  col-sm-offset-2 yes-no">
                        <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes &#10003;</button></a>
-                      
+
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
@@ -115,7 +115,7 @@ Velma’s breast tissue sample
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
                           <div class="col-md-4">
-                              <a data-navigate="patient1view8cz" class="previous">
+                              <a data-navigate="patient1view8" class="previous">
                                   <button class="" type="button" name="button">Previous</button>
                               </a>
                           </div>
