--- a/src/javascript/templates/patient3/patient3view1.hbs
+++ b/src/javascript/templates/patient3/patient3view1.hbs
@@ -1,4 +1,3 @@
-
 <div class="spacer2"></div>
 <div class="row">
   <div class="col-md-3 no-pad">
@@ -10,9 +9,9 @@
           <li>Michele Johnson</li>
         </ul>
         <div class="row next-steps p-2-steps">
-          <ul class="background-purple">
+          <ul class="">
             <li><span></span></li>
-            <li class="border-bottom"><span><img src="images/icon_biopsy_on.png" alt="" /></span>Biopsy</li>
+            <li class="border-bottom"><span><img src="images/icon_biopsy_off.png" alt="" /></span>Biopsy</li>
           </ul>
           <ul>
             <li><span></span></li>
@@ -41,49 +40,34 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Michele had a left breast biopsy. Let’s evaluate the tissue.
-  </blockquote>
-    <main id="content-main" class="row patient-2 top-gray">
+  In this segment of the Decoding Cancer Virtual Lab, you will evaluate Michele’s breast cancer and conduct tests to recommend a treatment plan.
+    </blockquote>
+    <main id="content-main" class="row patient-2">
 
-      <div class="header-gray">
-        <div class="col-md-3">
-          <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
-        </div>
-        <div class="col-md-9">
-          <h4>Does this tissue sample indicate the presence of cancer?
-</h4>
-
-        </div>
-      </div>
-      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+      <p>Michele Johnson is a 47-year old female.  Michele recently had her routine yearly mammogram.  Michele has never had breast cancer before.
 </p>
-<ul class="specs">
-  <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
-  <li><strong>Laterality:</strong> left</li>
-  <li><strong>Tumor size:</strong>1 cm</li>
-
-</ul>
-<figure>
-  <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
-</figure>
-
-
-
+         <figure class="m-bottom">
+           <img src="images/patient2slide1.png" alt="" />
+           <figcaption>
+             This is a caption. Lorem ipsum dolor sin sit amet consectutor
+           </figcaption>
+         </figure>
+         <p><strong>As you progress through the Virtual Lab, be sure to record Michele’s test results and your notes in your Lab Handbook.  </strong>
+</p>
 
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a class="previous"><button class="muted" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient2view2" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
-
 
     </main>
   </div>
