--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -41,28 +41,23 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Michele had a left breast biopsy. Let’s evaluate the tissue.
+      Michele’s tissue sample has been sent for HER2 FISH testing.
   </blockquote>
     <main id="content-main" class="row patient-2 top-gray">
 
-      <div class="header-gray">
-        <div class="col-md-3">
-          <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
-        </div>
-        <div class="col-md-9">
-          <h4>Does this tissue sample indicate the presence of cancer?
-</h4>
 
-        </div>
-      </div>
-      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+      <p>Click on the microscope to analyze Michele’s tissue sample.  Calculate the ratio of red dots to green dots.
+
 </p>
-<ul class="specs">
-  <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
-  <li><strong>Laterality:</strong> left</li>
-  <li><strong>Tumor size:</strong>1 cm</li>
+<p>
+  Are the results amplified or not amplified?
 
-</ul>
+</p>
+<p>
+  <strong>Be sure to record the results in your Lab Handbook.</strong>
+
+</p>
+
 <figure>
   <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
 </figure>
@@ -73,13 +68,13 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient2view9" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient2view11" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
