--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -41,8 +41,7 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Michele had a left breast biopsy. Let’s evaluate the tissue.
-  </blockquote>
+Michele’s tissue sample has been sent for ER testing.  </blockquote>
     <main id="content-main" class="row patient-2 top-gray">
 
       <div class="header-gray">
@@ -50,12 +49,15 @@
           <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
         </div>
         <div class="col-md-9">
-          <h4>Does this tissue sample indicate the presence of cancer?
+          <h4>Click the microscope to conduct the ER Test.
+
 </h4>
 
         </div>
       </div>
-      <p>Here is important information about Michele’s tissue sample.  Be sure to record it in your Lab Handbook.
+      <p>Are Michele’s ER test results positive or negative?  <br><br>
+<strong>Be sure to record this information in the Lab Handbook.
+</strong>
 </p>
 <ul class="specs">
   <li><strong>Specimen Type:   </strong>Left breast biopsy</li>
@@ -73,13 +75,13 @@
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-4">
-                 <a data-navigate="patient2view4" class="previous"><button class="" type="button" name="button">Previous</button></a>
+                 <a data-navigate="patient2view7" class="previous"><button class="" type="button" name="button">Previous</button></a>
                </div>
                <div class="col-md-4 line-across">
 
                </div>
                <div class="col-md-4">
-                 <a data-navigate="patient2view6" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                 <a data-navigate="patient2view9" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
                </div>
              </div>
          </div>
